Email working, add-user shows all networks

--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -1,8 +1,11 @@
+<link rel="import" href="../../bower/core-icons/core-icons.html">
+<link rel="import" href="../../bower/core-icons/social-icons.html">
+<link rel="import" href="../../bower/core-signals/core-signals.html">
+<link rel="import" href="../../bower/paper-fab/paper-fab.html">
 <link rel="import" href="../../bower/polymer/polymer.html">
 <link rel='import' href='../../bower/paper-progress/paper-progress.html'>
-<link rel="import" href="../../bower/core-signals/core-signals.html">
-<link rel="import" href="../../bower/core-icons/social-icons.html">
 <link rel='import' href='roster-group.html'>
+<link rel='import' href='add-user.html'>
 
 <polymer-element name='uproxy-roster' attributes='contacts, mode'>
 
@@ -65,6 +68,8 @@
 
     <!-- Listen for the 'login-success' event from root.ts; once logged in, show the loading contacts animation. -->
     <core-signals on-core-signal-login-success="{{ loadContacts }}"></core-signals>
+
+    <uproxy-adduser></uproxy-adduser>
 
     <!-- Shown if there are no contacts found so far -->
     <div id='loadContacts' hidden?='{{ hasContacts }}'>
