--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../../bower/paper-tabs/paper-tabs.html">
 <link rel="import" href="../../bower/paper-toast/paper-toast.html">
 <link rel="import" href="../../bower/core-tooltip/core-tooltip.html">
+<link rel='import' href='add-user.html'>
 <link rel="import" href="i18n-filter.html">
 <link rel="import" href='splash.html'>
 <link rel="import" href='roster.html'>
@@ -294,6 +295,8 @@
         </uproxy-bubble>
 
         <div class='content' fit>
+
+          <uproxy-add-user></uproxy-add-user>
 
           <div id='rosterContainer' vertical layout>
             <div id='roster-panel' flex>
