Intercept invite URLS

--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -113,6 +113,9 @@
     #languageLink paper-item::shadow .button-content {
       padding: 0;
     }
+    .toggleCreateNewUser {
+      cursor: pointer;
+    }
     </style>
 
     <div horizontal layout>
@@ -179,14 +182,23 @@
     <div vertical layout id='emailLogin' hidden?='{{SPLASH_STATES.EMAIL_LOGIN!==model.globalSettings.splashState}}'>
        <!-- TODO: translate all text here -->
       <div class='view' flex>
-        <p>Sign in to uProxy.</p>
+
+        <h1 hidden?='{{ !createNewUser }}'>Create a new account with uProxy</h1>
+        <h1 hidden?='{{ createNewUser }}'>Sign in with an existing uProxy account</h1>
+
         <paper-input-decorator label="name" layout vertical>
           <input is='core-input' value='{{ userId }}' />
         </paper-input-decorator>
         <paper-input-decorator label="password" layout vertical>
           <input is='core-input' type="password" value='{{ password }}' />
         </paper-input-decorator>
-        <paper-button raised on-tap='{{ loginToEmail }}'>Sign in</paper-button>
+
+        <paper-button hidden?='{{ !createNewUser }}' raised on-tap='{{ loginToEmail }}'>Create Account</paper-button>
+        <paper-button hidden?='{{ createNewUser }}' raised on-tap='{{ loginToEmail }}'>Sign In</paper-button>
+
+        <p class="toggleCreateNewUser" hidden?='{{ !createNewUser }}' on-tap='{{ toggleCreateNewUser }}'>Already have an account?</p>
+        <p class="toggleCreateNewUser" hidden?='{{ createNewUser }}' on-tap='{{ toggleCreateNewUser }}'>Create an account</p>
+
       </div>
       <uproxy-faq-link anchor='emailLogin'>
         Learn more
