Add switch between create account + login to existing account

--- a/src/generic_ui/polymer/add-user.html
+++ b/src/generic_ui/polymer/add-user.html
@@ -31,7 +31,7 @@
         <paper-button affirmative autofocus on-tap='{{ addUser }}'>Add Friend</paper-button>
       </div>
 
-      <paper-button affirmative>Cancel</paper-button>
+      <paper-button affirmative>Close</paper-button>
 
     </paper-action-dialog>
   </template>
