--- a/src/generic_ui/polymer/network.html
+++ b/src/generic_ui/polymer/network.html
@@ -14,6 +14,9 @@
       paper-button.Google {
         background: #dd4b39;
       }
+      paper-button.GMail {
+        background: #dd4b39;
+      }
       paper-button.Facebook {
         background: #3b5998;
       }
@@ -22,8 +25,8 @@
     <div class='network'>
       <span>
         <span>
-          <paper-button raised on-tap='{{connect}}' class='{{ networkName }}'>
-            {{ networkName }}
+          <paper-button raised on-tap='{{connect}}' class='{{ displayName }}'>
+            {{ displayName }}
           </button>
         </span>
       </span>
