--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -1,11 +1,9 @@
 <link rel='import' href='../../bower/polymer/polymer.html'>
 <link rel='import' href='../../bower/paper-button/paper-button.html'>
-<link rel='import' href='../../bower/paper-input/paper-input-decorator.html'>
 <link rel='import' href='../../bower/paper-item/paper-item.html'>
 <link rel="import" href="../../bower/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../../bower/paper-dropdown/paper-dropdown.html">
 <link rel="import" href="../../bower/core-menu/core-menu.html">
-<link rel='import' href='../../bower/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
 <link rel='import' href='network.html'>
 
@@ -99,7 +97,7 @@
       margin-left: 8px;
       margin-right: 8px;
     }
-    #intro1, #networks, #emailLogin {
+    #intro1, #networks {
       height: 100%;
     }
     #languageLink core-icon {
@@ -112,9 +110,6 @@
     }
     #languageLink paper-item::shadow .button-content {
       padding: 0;
-    }
-    .toggleCreateNewUser {
-      cursor: pointer;
     }
     </style>
 
